fix: update controller tests to match service return types and method signatures