@@ -2,210 +2,205 @@ package com.nvivx.vixhealthsystem.controllers;
 
 import com.nvivx.vixhealthsystem.controllers.staff.TechnicianController;
 import com.nvivx.vixhealthsystem.model.enums.MachineStatus;
-import com.nvivx.vixhealthsystem.model.resource.Machinery;
+import com.nvivx.vixhealthsystem.model.person.employee.Employee;
+import com.nvivx.vixhealthsystem.model.person.employee.Technician;
+import com.nvivx.vixhealthsystem.model.staff.VacationRequest;
+import com.nvivx.vixhealthsystem.service.core.EmployeeService;
 import com.nvivx.vixhealthsystem.service.resources.MachineryService;
-import org.junit.jupiter.api.BeforeEach;
+import com.nvivx.vixhealthsystem.service.scheduling.ShiftService;
+import com.nvivx.vixhealthsystem.service.scheduling.VacationService;
+import jakarta.servlet.http.HttpSession;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.ui.ConcurrentModel;
 import org.springframework.ui.Model;
 
-import static org.mockito.Mockito.*;
-import static org.junit.jupiter.api.Assertions.*;
+import java.util.List;
 
-@ExtendWith(MockitoExtension.class)
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
+
 class TechnicianControllerTest {
 
-    @Mock
-    private MachineryService machineryService;
+    private final MachineryService machineryService = mock(MachineryService.class);
+    private final EmployeeService employeeService = mock(EmployeeService.class);
+    private final ShiftService shiftService = mock(ShiftService.class);
+    private final VacationService vacationService = mock(VacationService.class);
+    private final HttpSession session = mock(HttpSession.class);
 
-    @Mock
-    private Model model;
+    private final TechnicianController controller =
+            new TechnicianController(machineryService, employeeService, shiftService, vacationService);
 
-    @InjectMocks
-    private TechnicianController technicianController;
-
-    private Machinery testMachine;
-
-    @BeforeEach
-    void setUp() {
-        testMachine = new Machinery();
-        testMachine.setId(1L);
-        testMachine.setName("Test MRI Machine");
-        testMachine.setStatus(MachineStatus.WORKING);
-    }
+    // ================= DASHBOARD =================
 
     @Test
-    void testDashboard() {
-        // Arrange
-        when(machineryService.getTotalMachineCount()).thenReturn(5L);
-        when(machineryService.getFaultyMachineCount()).thenReturn(1L);
+    void dashboard_shouldWork() {
+        when(machineryService.getTotalMachineCount()).thenReturn(10L);
+        when(machineryService.getFaultyMachineCount()).thenReturn(2L);
         when(machineryService.getMaintenanceMachineCount()).thenReturn(1L);
-        when(machineryService.getActiveAlerts()).thenReturn(java.util.Collections.emptyList());
+        when(machineryService.getActiveAlerts()).thenReturn(List.of());
 
-        // Act
-        String result = technicianController.dashboard(model);
+        Model model = new ConcurrentModel();
 
-        // Assert
-        assertEquals("technician/dashboard", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Technician Dashboard"));
-        verify(model).addAttribute(eq("currentPage"), eq("dashboard"));
-        verify(model).addAttribute(eq("totalMachines"), eq(5L));
-        verify(model).addAttribute(eq("faultyCount"), eq(1L));
-        verify(model).addAttribute(eq("maintenanceCount"), eq(1L));
-        verify(model).addAttribute(eq("alertCount"), eq(1L));
-        verify(model).addAttribute(eq("activeAlerts"), any());
+        String view = controller.dashboard(model);
+
+        assertEquals("technician/dashboard", view);
+        assertEquals("Technician Dashboard", model.getAttribute("pageTitle"));
+        assertEquals(10L, model.getAttribute("totalMachines"));
+    }
+
+    // ================= ALL MACHINES =================
+
+    @Test
+    void viewAllMachines_shouldWork() {
+        when(machineryService.getAllMachines()).thenReturn(List.of());
+
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewAllMachines(model);
+
+        assertEquals("technician/machines", view);
+        assertEquals("All Machines", model.getAttribute("pageTitle"));
+    }
+
+    // ================= FAULTY MACHINES =================
+
+    @Test
+    void viewFaultyMachines_shouldWork() {
+        Technician tech = new Technician();
+        tech.setId(1L);
+
+        when(session.getAttribute("user")).thenReturn(tech);
+        when(employeeService.findById(1L)).thenReturn(tech);
+        when(machineryService.getFaultyMachinesForTechnician(any()))
+                .thenReturn(List.of());
+
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewFaultyMachines(session, model);
+
+        assertEquals("technician/machines", view);
+        assertTrue((Boolean) model.getAttribute("isFaultyView"));
+    }
+
+    // ================= UPDATE STATUS =================
+
+    @Test
+    void updateMachineStatus_shouldWork() {
+
+        // IMPORTANT: your service returns a MACHINE-like object
+        var machine = mock(com.nvivx.vixhealthsystem.model.resource.Machinery.class);
+
+        when(machine.getName()).thenReturn("MRI Scanner");
+
+        when(machineryService.updateMachineStatus(anyLong(), any(MachineStatus.class)))
+                .thenReturn(machine);
+
+        Model model = new ConcurrentModel();
+
+        String view = controller.updateMachineStatus(1L, "FAULTY", model);
+
+        assertEquals("technician/result", view);
+        assertTrue(model.getAttribute("message").toString().contains("MRI Scanner"));
+    }
+
+    // ================= ALERTS =================
+
+    @Test
+    void alerts_shouldWork() {
+        when(machineryService.getActiveAlerts()).thenReturn(List.of());
+
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewAlerts(model);
+
+        assertEquals("technician/alerts", view);
+        assertEquals("Machine Alerts", model.getAttribute("pageTitle"));
+    }
+
+    // ================= PROFILE =================
+
+    @Test
+    void profile_shouldRedirectIfNoSession() {
+        when(session.getAttribute("user")).thenReturn(null);
+
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewProfile(session, model);
+
+        assertEquals("redirect:/login", view);
     }
 
     @Test
-    void testViewAllMachines() {
-        // Arrange
-        when(machineryService.getAllMachines()).thenReturn(java.util.Collections.emptyList());
+    void profile_shouldWork() {
+        Employee emp = new Technician();
+        emp.setId(1L);
 
-        // Act
-        String result = technicianController.viewAllMachines(model);
+        when(session.getAttribute("user")).thenReturn(emp);
+        when(employeeService.findById(1L)).thenReturn(emp);
 
-        // Assert
-        assertEquals("technician/machines", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("All Machines"));
-        verify(model).addAttribute(eq("currentPage"), eq("machines"));
-        verify(model).addAttribute(eq("machines"), any());
-        verify(model).addAttribute(eq("isFaultyView"), eq(false));
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewProfile(session, model);
+
+        assertEquals("employee/profile", view);
+        assertEquals("My Profile", model.getAttribute("pageTitle"));
     }
 
+    // ================= SHIFTS =================
+
     @Test
-    void testViewFaultyMachines() {
-        // Arrange
-        when(machineryService.getFaultyMachines()).thenReturn(java.util.Collections.emptyList());
+    void shifts_shouldWork() {
+        Technician tech = new Technician();
+        tech.setId(1L);
 
-        // Act
-        String result = technicianController.viewFaultyMachines(model);
+        when(session.getAttribute("user")).thenReturn(tech);
 
-        // Assert
-        assertEquals("technician/machines", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Faulty Machines"));
-        verify(model).addAttribute(eq("currentPage"), eq("faultyMachines"));
-        verify(model).addAttribute(eq("machines"), any());
-        verify(model).addAttribute(eq("isFaultyView"), eq(true));
+        when(shiftService.getShiftsForEmployee(anyLong()))
+                .thenReturn(List.of());
+
+        when(vacationService.getApprovedRequestsForEmployee(anyInt()))
+                .thenReturn(List.of(mock(VacationRequest.class)));
+
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewMyShifts(session, model);
+
+        assertEquals("employee/my-shifts", view);
+        assertEquals("My Shifts", model.getAttribute("pageTitle"));
     }
 
+    // ================= MACHINE DETAILS =================
+
     @Test
-    void testViewMaintenanceMachines() {
-        // Arrange
-        when(machineryService.getMachinesUnderMaintenance()).thenReturn(java.util.Collections.emptyList());
+    void machineDetails_shouldWork() {
+        var machine = mock(com.nvivx.vixhealthsystem.model.resource.Machinery.class);
+        when(machine.getName()).thenReturn("Pump");
 
-        // Act
-        String result = technicianController.viewMaintenanceMachines(model);
+        when(machineryService.getMachineById(1L)).thenReturn(machine);
 
-        // Assert
-        assertEquals("technician/machines", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machines Under Maintenance"));
-        verify(model).addAttribute(eq("currentPage"), eq("machines"));
-        verify(model).addAttribute(eq("machines"), any());
+        Model model = new ConcurrentModel();
+
+        String view = controller.viewMachineDetails(1L, model);
+
+        assertEquals("technician/machine-details", view);
     }
 
-    @Test
-    void testUpdateMachineStatus() {
-        // Arrange
-        when(machineryService.updateMachineStatus(eq(1L), eq(MachineStatus.WORKING)))
-                .thenReturn(testMachine);
-
-        // Act
-        String result = technicianController.updateMachineStatus(1L, "WORKING", model);
-
-        // Assert
-        assertEquals("technician/result", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine Status Updated"));
-        verify(model).addAttribute(eq("message"), anyString());
-    }
+    // ================= REPAIR =================
 
     @Test
-    void testViewAlerts() {
-        // Arrange
-        when(machineryService.getActiveAlerts()).thenReturn(java.util.Collections.emptyList());
+    void repairMachine_shouldWork() {
+        var machine = mock(com.nvivx.vixhealthsystem.model.resource.Machinery.class);
 
-        // Act
-        String result = technicianController.viewAlerts(model);
+        when(machine.getName()).thenReturn("Ventilator");
 
-        // Assert
-        assertEquals("technician/alerts", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine Alerts"));
-        verify(model).addAttribute(eq("currentPage"), eq("alerts"));
-        verify(model).addAttribute(eq("alerts"), any());
-        verify(model).addAttribute(eq("alertCount"), eq(0));
-    }
+        when(machineryService.repairMachine(1L)).thenReturn(machine);
 
-    @Test
-    void testViewMaintenanceHistory() {
-        // Arrange
-        when(machineryService.getAllMachines()).thenReturn(java.util.Collections.emptyList());
+        Model model = new ConcurrentModel();
 
-        // Act
-        String result = technicianController.viewMaintenanceHistory(model);
+        String view = controller.repairMachine(1L, "fixed", model);
 
-        // Assert
-        assertEquals("technician/maintenance-history", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine History"));
-        verify(model).addAttribute(eq("machines"), any());
-    }
-
-    @Test
-    void testViewMachineDetails() {
-        // Arrange
-        when(machineryService.getMachineById(1L)).thenReturn(testMachine);
-
-        // Act
-        String result = technicianController.viewMachineDetails(1L, model);
-
-        // Assert
-        assertEquals("technician/machine-details", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine Details - Test MRI Machine"));
-        verify(model).addAttribute(eq("currentPage"), eq("machines"));
-        verify(model).addAttribute(eq("machine"), eq(testMachine));
-    }
-
-    @Test
-    void testRepairMachine() {
-        // Arrange
-        when(machineryService.repairMachine(1L)).thenReturn(testMachine);
-
-        // Act - Note: repairMachine accepts notes as optional parameter
-        String result = technicianController.repairMachine(1L, "Fixed the power supply", model);
-
-        // Assert
-        assertEquals("technician/result", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine Repaired"));
-        verify(model).addAttribute(eq("message"), anyString());
-    }
-
-    @Test
-    void testRepairMachineWithoutNotes() {
-        // Arrange
-        when(machineryService.repairMachine(1L)).thenReturn(testMachine);
-
-        // Act - Test with null notes
-        String result = technicianController.repairMachine(1L, null, model);
-
-        // Assert
-        assertEquals("technician/result", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine Repaired"));
-        verify(model).addAttribute(eq("message"), anyString());
-    }
-
-    @Test
-    void testViewMachineDetailsNotFound() {
-        // Arrange
-        when(machineryService.getMachineById(999L))
-                .thenThrow(new RuntimeException("Machine not found with id: 999"));
-
-        // Act
-        String result = technicianController.viewMachineDetails(999L, model);
-
-        // Assert
-        assertEquals("technician/result", result);
-        verify(model).addAttribute(eq("pageTitle"), eq("Machine Not Found"));
-        verify(model).addAttribute(eq("message"), anyString());
+        assertEquals("technician/result", view);
+        assertTrue(model.getAttribute("message").toString().contains("Ventilator"));
     }
 }
